// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <Input /> should match aria SnapShot 1`] = `
<div
  className="md-input-container"
>
  <Label
    className="md-input__label"
    htmlFor="1"
    label="test"
    theme=""
  />
  <div
    className="md-input__wrapper"
  >
    <input
      aria-describedby="ariaDescribedBy"
      aria-label="ariaLabel"
      className="md-input"
      id="1"
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`tests for <Input /> should match clear SnapShot 1`] = `
<div
  className="md-input-container"
>
  <Label
    className="md-input__label"
    htmlFor="1"
    label="test"
    theme=""
  />
  <div
    className="md-input__wrapper"
  >
    <input
      className="md-input"
      id="1"
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`tests for <Input /> should match number SnapShot 1`] = `
<div
  className="md-input-container"
>
  <Label
    className="md-input__label"
    htmlFor="1"
    label="test"
    theme=""
  />
  <div
    className="md-input__wrapper"
  >
    <input
      className="md-input"
      id="1"
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`tests for <Input /> should match password SnapShot 1`] = `
<div
  className="md-input-container"
>
  <Label
    className="md-input__label"
    htmlFor="1"
    label="test"
    theme=""
  />
  <div
    className="md-input__wrapper"
  >
    <input
      className="md-input"
      id="1"
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
      type="password"
      value=""
    />
  </div>
</div>
`;

exports[`tests for <Input /> should match text SnapShot 1`] = `
<div
  className="md-input-container"
>
  <Label
    className="md-input__label"
    htmlFor="1"
    label="test"
    theme=""
  />
  <div
    className="md-input__wrapper"
  >
    <input
      className="md-input"
      id="1"
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
      type="text"
      value=""
    />
  </div>
</div>
`;
